kubernetes/apps/observability/kubernetes-dashboard/app/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: observaility
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "tdash.${SECRET_DOMAIN}"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`kdash.${SECRET_DOMAIN}`)"
      middlewares:
        - name: network-error-pages@kubernetescrd
        - name: network-internal-only@kubernetescrd
        - name: network-default-middlewares@kubernetescrd
        # - name: network-middlewares-authentik@kubernetescrd
      services:
        - kind: Service
          name: kubernetes-dashboard-kong-proxy
          port: 443

  tls:
    secretName: "${SECRET_DOMAIN/./-}-observability-tls"
